--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.3.4",
-    "chalk": "^5.2.0",
+    "axios": "^1.2.0",
+    "chalk": "^4.1.0",
     "commander": "^10.0.0",
     "download-git-repo": "^3.0.2",
     "fs-extra": "^11.1.0",
-    "inquirer": "^9.1.4",
-    "path": "^0.12.7"
+    "inquirer": "^8.2.4"
   }
 }
